update chức năng thống kê doanh thu

--- a/PROJECT_CK/PROJECT_CK/Main.resx
+++ b/PROJECT_CK/PROJECT_CK/Main.resx
@@ -27288,7 +27288,7 @@
         /7nxxka/xbHHjo0+HwtAQ3H+UA3WWrRcR/l/wgktRKmpaoYAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="guna2ImageButton17.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="loadBanchay.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
         vAAADrwBlbxySQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAADlbSURBVHhe7d0H
@@ -27539,7 +27539,7 @@
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA5ff/AbbmdWbPuSqOAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="guna2ImageButton18.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="loadBancham.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
         vAAADrwBlbxySQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAADlbSURBVHhe7d0H
